Fix alignment in 'Beam me up' button

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -936,12 +936,13 @@ a {
     margin: 0px 0px 0px 0;
     padding: 10px 0 0 0;
     width: 195px;
-    height: 44px;
+    height: 32px;
     text-align: center;
     font: bold 17px "PT Sans";
     text-decoration: none;
+    line-height: 27px;
     color: #333333;
-    background: transparent url("/images/teleport_orange.png") no-repeat; }
+    background: transparent url("/images/teleport_orange.png") no-repeat 0 0; }
   &.teleport_natural {
     position: absolute;
     top: 13px;
@@ -949,12 +950,13 @@ a {
     margin: 0px 0px 0px 0;
     padding: 10px 0 0 0;
     width: 195px;
-    height: 44px;
+    height: 32px;
     text-align: center;
     font: bold 17px "PT Sans";
     text-decoration: none;
+    line-height: 27px;
     color: #333333;
-    background: transparent url("/images/teleport_green.png") no-repeat; }
+    background: transparent url("/images/teleport_green.png") no-repeat 0 0; }
   &.teleport_mixed {
     position: absolute;
     top: 13px;
@@ -962,12 +964,13 @@ a {
     margin: 0px 0px 0px 0;
     padding: 10px 0 0 0;
     width: 195px;
-    height: 44px;
+    height: 32px;
     text-align: center;
     font: bold 17px "PT Sans";
     text-decoration: none;
+    line-height: 27px;
     color: #333333;
-    background: transparent url("/images/bean_up_mixed.png") no-repeat; }
+    background: transparent url("/images/bean_up_mixed.png") no-repeat 0 0; }
   &.teleport:hover, &.teleport_natural:hover, &.teleport_cultural:hover {
     color: #000000; } }
 
